# spectral-profiling-gnns

./: .gitignore  README.md  dataset_download.py  datasets.py  fagcn_harness.py  gcn_harness.py  pyproject.toml  requirements.txt  submit_spectral_massive_array.sh  train_spatial.py
analysis/: approx_metrics.py  homophily.py  homophily_per_class.csv  homophily_summary.csv  laplacians_sparsify.jl  load_existing_slp.py  metrics.json  metrics.py  plot_physics_questions.py  predict_arch.py  projection.py  replot_metrics.py  results_so_far.md  slp_plot.py  sparsify_tradeoff.py  spectrum_subgraph.py  spectrum_subgraph_test.py
common/: datasets.py
proposal/: ideas.md  main.tex
runs/: best_spatial.csv  collate.py
scripts/: build_release_artifacts.py
slurm_logs/: jacobi_massive_9597474_0.out  jacobi_massive_9597474_1.out  jacobi_massive_9597474_10.out  jacobi_massive_9597474_11.out  jacobi_massive_9597474_12.out  jacobi_massive_9597474_13.out  jacobi_massive_9597474_14.err  jacobi_massive_9597474_14.out  jacobi_massive_9597474_15.out  jacobi_massive_9597474_16.out  jacobi_massive_9597474_17.out  jacobi_massive_9597474_18.out  jacobi_massive_9597474_2.out  jacobi_massive_9597474_3.out  jacobi_massive_9597474_4.err  jacobi_massive_9597474_4.out  jacobi_massive_9597474_5.out  jacobi_massive_9597474_6.err  jacobi_massive_9597474_6.out  jacobi_massive_9597474_7.err  jacobi_massive_9597474_7.out  jacobi_massive_9597474_8.err  jacobi_massive_9597474_8.out  jacobi_massive_9597474_9.out
spatial/: datasets.py  fagcn_harness.py  gcn_harness.py  h2gcn_harness.py  hfgcn_harness.py  (+6 more)
(+35489 files in other folders)
