[project]
name = "spectral-profling-gnns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "filelock==3.29.0",
    "fsspec==2026.4.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "matplotlib>=3.7",
    "mpmath==1.3.0",
    "networkx==3.4.2",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "setuptools==81.0.0",
    "sympy==1.14.0",
    "torch>=2.4,<2.9",
    "torch-geometric>=2.5,<2.8",
    "typing-extensions==4.15.0",
]
